# roguelike

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: context.c.35176836CA316D9A.idx  egl_context.c.A9CFE53757042A74.idx  glfw3.h.11B1C80B1D7BD569.idx  glfw3.h.1F56BBB3DFDF9A11.idx  glfw3native.h.D56CC2E81660FD0C.idx  init.c.C71B310403C13730.idx  input.c.8073DD1C037761C7.idx  internal.h.51CC24D384DECE52.idx  main.cpp.EFAFDF9F0D9D53BC.idx  mappings.h.4A644158D127C66E.idx  monitor.c.7CAD46CF73DAD86A.idx  null_init.c.3CB1F186FD38E968.idx  null_joystick.c.FADE703ECA8F4111.idx  null_joystick.h.69EA5542287B1692.idx  null_monitor.c.5348CEB450BE532C.idx  null_platform.h.A79CFC7C98992B3C.idx  null_window.c.53137D864F7F06EC.idx  osmesa_context.c.891137283F3C1C7E.idx  platform.c.E47501FCC5690878.idx  platform.h.1C5344EBAE3DA4BB.idx  vulkan.c.A2C427FAC64043DB.idx  wgl_context.c.B910B6FEEFDFABD1.idx  win32_init.c.C674A7BC084DD626.idx  win32_joystick.c.22DFA7FD13E8BAC7.idx  win32_joystick.h.90BB725DB73DDA71.idx  win32_module.c.7F181243043029EE.idx  win32_monitor.c.885A42DA84D375DB.idx  win32_platform.h.5142038AFF9CFD99.idx  win32_thread.c.B42322B2B1C23C7B.idx  win32_thread.h.67E6DDE4B1EB5B9F.idx  win32_time.c.CE24655F67EF2E2D.idx  win32_time.h.58B8FF7D8ACB94FE.idx  win32_window.c.4BA4378D9653DBF3.idx  window.c.7CDB5375AC02FB13.idx
assets/shaders/: fragment.glsl
include/glad/: glad.h
src/: glad.c  main.cpp  renderer.cpp  renderer.h  renderer.hpp  shaders.cpp
src/.cache/clangd/index/: main.cpp.EFAFDF9F0D9D53BC.idx
